Cherry-pick r241137. rdar://problem/47259025

Unable to sign in leetcode.
    https://bugs.webkit.org/show_bug.cgi?id=194366
    rdar://problem/47259025.

    Reviewed by Chris Dumez.

    Source/WebCore:

    In case a signal is passed as part of a FetchRequestInit,
    the IDL binding code is throwing an exception in case signal is not an AbortSignal object.
    This breaks an AbortSignal shim used in some web sites.
    Relaxed the IDL binding rule by marking signal as any and doing the conversion in FetchRequest.

    Test: http/wpt/fetch/request-abort.html
    Also covered by manually signing in to leetcode.

    * Modules/fetch/FetchRequest.cpp:
    (WebCore::FetchRequest::initializeWith):
    * Modules/fetch/FetchRequestInit.h:
    (WebCore::FetchRequestInit::hasMembers const):
    * Modules/fetch/FetchRequestInit.idl:

    LayoutTests:

    * http/wpt/fetch/request-abort-expected.txt: Added.
    * http/wpt/fetch/request-abort.html: Added.

    Canonical link: https://commits.webkit.org/208826@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241137 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/208691.36@safari-608.1.5.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.1.5.1-branch@241373 268f45cc-cd09-0410-ab3c-d52691b4dbfc